@startuml
scale 1

class ActionWrapper {
    +get_action()
    +get_action_space_dim()
    +get_actions()
    +get_excluded_actions()
    +is_action_done()
    +reset()
}

class GymWrapper {
}
class SC2Wrapper {
}
class VizdoomWrapper {
}

ActionWrapper <|-- GymWrapper
ActionWrapper <|-- SC2Wrapper
ActionWrapper <|-- VizdoomWrapper
ActionWrapper *-- LearningModel

@enduml